Smooth scroll and additional hero image option

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Lanta.info</title>
 	<link rel="stylesheet" href="css/style.min.css" />
-	<script type="text/javascript" src="js/lantainfo.min.js"></script>
+
+    <!--    Google-hosted jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+    <!--    Automatically make same-page links scroll smoothly
+            https://github.com/kswedberg/jquery-smooth-scroll -->
+    <script type="text/javascript" src="js/jquery.smooth-scroll-min.js"></script>
+    <script type="text/javascript" src="js/lantainfo.min.js"></script>
 </head>
 <body>
     <div class="site-wrap">
