--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Lanta.info</title>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
 	<link rel="stylesheet" href="css/style.min.css" />
 	<script type="text/javascript" src="js/lantainfo.min.js"></script>
 </head>
@@ -146,10 +147,14 @@
         </section><!-- #activities -->
         <section id="how-to-get-here">
             <div class="section-inner">
-                <h2>How To Get Here</h2>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-                <div class="map-wrap">
-                    <!-- add map here -->
+                <div class="row">
+                    <div class="column col-30">
+                        <h2>How To Get Here</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                    </div>
+                    <div class="column col-70">
+                        <iframe class="lanta-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253118.44698136442!2d99.07460479999992!3d7.577619999999991!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x304e044169c7fca3%3A0xc283715ac0c34f5d!2sKo+Lanta!5e0!3m2!1sde!2sth!4v1429958400132" frameborder="0"></iframe>
+                    </div>
                 </div>
             </div>
         </section>
