Add matchHeight for activity cards
Fix activity card headline font size

Signed-off-by: Florian Ziegler <mail@florianziegler.de>

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!--    Automatically make same-page links scroll smoothly
             https://github.com/kswedberg/jquery-smooth-scroll -->
     <script type="text/javascript" src="js/jquery.smooth-scroll-min.js"></script>
+    <!--    A responsive equal heights plugin for jQuery
+            https://github.com/liabru/jquery-match-height -->
+    <script type="text/javascript" src="js/jquery.matchHeight-min.js"></script>
     <script type="text/javascript" src="js/lantainfo.min.js"></script>
 </head>
 <body>
