--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="row">
                     <div class="column col-25">
                         <div class="activity">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-scuba.jpg" alt="Scuba diving photo by Ilse Reijs and Jan-Noud Hutten – https://www.flickr.com/photos/39891373@N07/" />
                             <h2>Scuba Diving</h2>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
                         </div>
@@ -147,7 +147,7 @@
                     </div>
                     <div class="column col-25">
                         <div class="activity">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-ao-klong-jark-waterfall.jpg" alt="Photo by Rushen – https://www.flickr.com/photos/rushen/8184658168/in/photolist-" />
                             <h2>Waterfall Ao Klong Jark </h2>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
                         </div>
