--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="column col-25">
                         <div class="activity">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-snorkeling.jpg" alt="Snorkeling photo by Osvaldo Rodríguez – https://www.flickr.com/photos/osvaldorove/" />
                             <h2>Snorkelling</h2>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
                         </div>
