--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </div>
                     <div class="column col-25">
                         <div class="activity">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-sea-kayaking.jpg" alt="Sea kayaking photo by Joel Burslem – https://www.flickr.com/photos/leojmelsrub/6046333" />
                             <h2>Sea Kayaking</h2>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
                         </div>
