--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
                         <p>floating boat festival. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
                     </div>
                     <div class="column col-50">
+                        <h2>Loi Krathong</h2>
+                        <span class="date">November 21st 2015</span>
+                        <span class="location">Old Town</span>
+                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                    </div>
+                    <div class="column col-50">
                         <h2>Laanta Lanta Festival</h2>
                         <span class="date">March 2016</span>
                         <span class="location">Lanta Old Town</span>
@@ -81,12 +87,6 @@
                         <span class="location">everywhere</span>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
                     </div>
-                    <div class="column col-50">
-                        <h2>Loi Krathong</h2>
-                        <span class="date">November 21st 2015</span>
-                        <span class="location">Old Town</span>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
-                    </div>
                 </div>
             </div>
         </section>
@@ -98,28 +98,28 @@
                         <div class="activity">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Scuba Diving</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>Diving at the famous Hin Daeng, Hin Muang, Hin Bida and Ko Haa sites. Perhaps the best diving in Thailand. Yearly sightings of Whale Sharks and Mantarays are seasonal.</p>
                         </div>
                     </div>
                     <div class="column col-25">
                         <div class="activity">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Snorkelling</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>Many tours are available to different islands in the region, including Koh Haa, Koh Rok and the popular four islands trip.</p>
                         </div>
                     </div>
                     <div class="column col-25">
                         <div class="activity">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Sea Kayaking</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>The east side of Ko Lanta with its rich mangrove forests and caves is a great option for off-the-beaten-path kayaking. Kayaking can also be done on Ko Talabaeng, the limestone cliff near Ko Lanta.</p>
                         </div>
                     </div>
                     <div class="column col-25">
                         <div class="activity">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Fishing</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>Fishers can catch the likes of marlin, sailfish, barracuda, red snapper, and tuna. Three different kinds of fishing trip are offered by private longtail boat: half-day, full-day, and night fishing.</p>
                         </div>
                     </div>
                 </div>
@@ -128,28 +128,28 @@
                         <div class="activity">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Sailing</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>Boat charters are available to/from neighbouring islands and down to the south near beautiful islands near the Malaysian border.</p>
                         </div>
                     </div>
                     <div class="column col-25">
                         <div class="activity">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Local Island Trips</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>May options for available for visiting local islands include: Koh Rok, Emerald Cave (Koh Muk), Koh Kradan, Koh Chuek, Koh Ngai and Talabeng</p>
                         </div>
                     </div>
                     <div class="column col-25">
                         <div class="activity">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Khao Mai Keaw cave</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>Located in the centre of the island, they offer a wonder of rocks and caverns and housing spectacular stalactites and stalagmites, some of the caves are just huge and one of them contains a pool.</p>
                         </div>
                     </div>
                     <div class="column col-25">
                         <div class="activity">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Waterfall Ao Klong Jark </h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>In Klong Jark (Waterfall Bay) there are waterfalls which are best visited in the green season via an hour-long (three kilometre) nature trek inland. Elephant treks offer a more leisurely way to the waterfall on hot days.</p>
                         </div>
                     </div>
                 </div>
