--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
                         <div class="activity">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Mangrove forest</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>Spending the day on a Longtail Boat, floating though the cool, shady mangrove rivers between Ko Lanta Yai and Ko Lanta Nai, an experience to be savored and enjoyed. Many wonderful photo opportunities</p>
                         </div>
                     </div>
                     <div class="column col-25">
                         <div class="activity">
                             <img src="images/intro-bg.jpg" alt="" />
-                            <h2>Organic food farms</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <h2>Farms</h2>
+                            <p>From Organic food farms to Butterfly and Orchid Nursery farms. There are many ecological distractions on the island.</p>
                         </div>
                     </div>
                     <div class="column col-25">
