--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div class="row">
                     <div class="column col-25">
                         <div class="activity">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-sailing.jpg" alt="Sailing photo by Peter Reid – https://www.flickr.com/photos/ourcommon/" />
                             <h2>Sailing</h2>
                             <p>Boat charters are available to/from neighbouring islands and down to the south near beautiful islands near the Malaysian border.</p>
                         </div>
