--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-sailing.jpg" alt="Sailing photo by Peter Reid – https://www.flickr.com/photos/ourcommon/" />
                             <h2>Sailing</h2>
                             <p>Boat charters are available to/from neighbouring islands and down to the south near beautiful islands near the Malaysian border.</p>
                         </div>
