--- a/index.html
+++ b/index.html
@@ -65,25 +65,25 @@
                     <div class="column col-50 event">
                         <h2>The Loy Rua Festival</h2>
                         <span class="date">October 2015</span>
-                        <span class="location">Chao Ley Village</span>
+                        <a class="location" href="#">Chao Ley Village</a>
                         <p>floating boat festival. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
                     </div>
                     <div class="column col-50 event">
                         <h2>Loi Krathong</h2>
                         <span class="date">November 21st 2015</span>
-                        <span class="location">Old Town</span>
+                        <a class="location" href="#">Old Town</a>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
                     </div>
                     <div class="column col-50 event">
                         <h2>Laanta Lanta Festival</h2>
                         <span class="date">March 2016</span>
-                        <span class="location">Lanta Old Town</span>
+                        <a class="location" href="#">Lanta Old Town</a>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
                     </div>
                     <div class="column col-50 event">
                         <h2>Song Kran</h2>
                         <span class="date">13. April 2016</span>
-                        <span class="location">everywhere</span>
+                        <a href="#" class="location">Everywhere on Ko Lanta</a>
                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
                     </div>
                 </div>
