Caves and Local Island Trips

--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-local-islands.jpg" alt="Emerald Caves photo by Angela Rutherford – https://www.flickr.com/photos/archivalproject/" />
                             <h2>Local Island Trips</h2>
                             <p>May options for available for visiting local islands include: Koh Rok, Emerald Cave (Koh Muk), Koh Kradan, Koh Chuek, Koh Ngai and Talabeng</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-cave.jpg" alt="Cave photo by Bo Jørgensen – https://www.flickr.com/photos/bojoergensen/" />
                             <h2>Khao Mai Keaw cave</h2>
                             <p>Located in the centre of the island, they offer a wonder of rocks and caverns and housing spectacular stalactites and stalagmites, some of the caves are just huge and one of them contains a pool.</p>
                         </div>
