--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-mangroves.jpg" alt="Mangroves photo by Jake Pierson – https://www.flickr.com/photos/jakeisbadman/3345181847" />
                             <h2>Mangrove forest</h2>
                             <p>Spending the day on a Longtail Boat, floating though the cool, shady mangrove rivers between Ko Lanta Yai and Ko Lanta Nai, an experience to be savored and enjoyed. Many wonderful photo opportunities</p>
                         </div>
