Add email contact in the footer
Signed-off-by: Florian Ziegler <mail@florianziegler.de>

--- a/index.html
+++ b/index.html
@@ -374,7 +374,14 @@
         </section>
         <footer class="site-footer">
             <div class="site-footer-inner">
-                <p>© lanta.info</p>
+                <div class="row">
+                    <div class="column col-50">
+                        <p>© lanta.info</p>
+                    </div>
+                    <div class="column col-50">
+                        <p class="right">Contact: <a href="mailto:info@lanta.info">info@lanta.info</a></p>
+                    </div>
+                </div>
             </div>
         </footer>
     </div><!-- .site-wrap -->
