--- a/index.html
+++ b/index.html
@@ -169,14 +169,14 @@
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-farm.jpg" alt="Butterfly Farm photo by Matt Bishop – https://www.flickr.com/photos/matthewdbishop/" />
                             <h2>Farms</h2>
                             <p>From Organic food farms to Butterfly and Orchid Nursery farms. There are many ecological distractions on the island.</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-birds.jpg" alt="Bird photo by Rushen – https://www.flickr.com/photos/rushen/" />
                             <h2>Bird watching</h2>
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
                         </div>
