--- a/index.html
+++ b/index.html
@@ -180,112 +180,112 @@
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Bird watching</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>The corridor between the rainforest is best for observing rainforest birds. Including: Flower Peckers, Hill Mynas, Green Pigeons, Drongos, Tailorbirds, Bulbuls, Sunbirds, Thick-Billed Pigeon, Canary yellow, Bird cage flower melon, Eagles and Woodpeckers etc.</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Buddhist temple</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>There are two temples on Koh Lanta. One near the car ferry in Saladan and one found at Lanta Old Town. The one near old town is popular. Every year monks come to the temples and you can observe special ceremonies.</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
-                            <h2>Buddhist meditation centre</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <h2>Emerald Caves</h2>
+                            <p>The emerald cave, suposedly a former hideaway for pirate treasure is a fascinating secret limestome cast cave including a beach and a small closed jungle environemnt, with a few special species of wildlife.</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Chinese temple, Old Town</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>There is an old abandoned Chinese temple completely on its own on top of a hill on the west coast of Koh Lanta.</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
-                            <h2>Tiger temple, south of the island</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <h2>Tiger caves</h2>
+                            <p>Another cave in the south of Koh Lanta just past Klong Nin beach.</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Thai Language School</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>High quality one day Thai lessons to full one year courses can be arranged with education visas on the island.</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Thai cooking classes</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>There are many offerings for cooking courses, from an authentic one-n-one experience with a local family cook, to a fully blown four course menu lesson.</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Muai Thai Training</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>A newly refurbished Muai Thai Gym is situated on the island, offering high quality courses throughout the year. They are afilliated with one of the boxing stadiums and students reguarly fight in front of cheering tourists.</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Muai Thai Stadium Watching</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>There are two Muai Thai stadiums on the island, one in Klong Dao and one in Long Beach. Both run reguar two fights a week.</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Gym</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>There is a full Gym on Lanta, with treadmills, excercise bikes, a full range of weights within a comfortable air conditioned site. Open All year around.</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Golf Driving Range</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>A golf driving range is available including clubs for rent and a rather fun and original way of retreiving golf balls. Open All year around.</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Yoga</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>There are many Yoga schools on the island that cater to all the ranges. Open All year around.</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Cliff jumping on nearby islands </h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p></p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Horseback riding</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>Hourse back riding is available in Klong Nin and is a beautiful way to explore some of the rain forests or to gallivant down one of our amazing beaches than on horseback. </p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Dirt biking</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>You can rent 250cc bikes through rubber plantations, small villages, and some amazing scenery you might otherwise miss.</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
-                            <h2>Local farmers market</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <h2>Local markets</h2>
+                            <p>There are many local markets on Lanta, depending on the day of the week and time of the year you can catch many of them from the road side. Otherwise ask a local where you can go.</p>
                         </div>
                     </div>
                     <div class="activity">
