--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </header><!-- .site-header -->
         <section id="intro">
             <div class="section-inner">
-                <h1>Welcome to Koh Lanta</h1>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+                <h1>#AlwaysKohLanta</h1>
+                <p>The beautiful, laid back, Thai island alternative. Open year round.</p>
             </div><!-- .section-inner -->
         </section><!-- #intro -->
         <section id="seasons">
