Headline and intro image update

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section id="intro">
             <div class="section-inner">
                 <h1>#AlwaysKohLanta</h1>
-                <p>The beautiful, laid back, Thai island alternative. Open year round.</p>
+                <p>Explore Koh Lanta, where you can still have an entire beach to yourself.</p>
             </div><!-- .section-inner -->
         </section><!-- #intro -->
         <section id="seasons">
