--- a/index.html
+++ b/index.html
@@ -290,28 +290,28 @@
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Thai massage</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>There are many massage options avaiable on Lanta, you can get authentic Thai massage and even Swedish style massages. Some are even trained from the famous Wat Pho. You can even get a massage on the beach!</p>
                         </div>
                     </div>
                     <div class="activity category-health">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Spa Treatments</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>There are many spas available, offering a wide range of treatments.</p>
                         </div>
                     </div>
                     <div class="activity category-health">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Fish Spa</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p></p>
                         </div>
                     </div>
                     <div class="activity category-culture">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Animal Welfare</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>A great charity organisation on Koh Lanta. They house cats and dogs.</p>
                         </div>
                     </div>
                     <div class="activity">
