--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </header><!-- .site-header -->
         <section id="intro">
             <div class="section-inner">
-                <h1>#AlwaysKohLanta</h1>
+                <h1>#AlwaysLanta</h1>
                 <p>Explore Koh Lanta, where you can still have an entire beach to yourself.</p>
             </div><!-- .section-inner -->
         </section><!-- #intro -->
