--- a/index.html
+++ b/index.html
@@ -311,14 +311,14 @@
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Animal Welfare</h2>
-                            <p>A great charity organisation on Koh Lanta. They house cats and dogs.</p>
+                            <p>A great charity organisation on Koh Lanta. They house cats and dogs that were once abandonded or wild and have adoption schemes to help find them new homes. They also have a full animal clinic onsite</p>
                         </div>
                     </div>
                     <div class="activity">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Shopping</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>A whole host of shops and markets are open around the island.</p>
                         </div>
                     </div>
                     <div class="activity category-nature">
@@ -332,28 +332,28 @@
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>National Park</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>The national park in the south, encoroprates a great day out, there is 1-2 hour a jungle treck up and over the park, a beautiful crescent beach and on the other side rocky cliffs and a lighthouse.</p>
                         </div>
                     </div>
                     <div class="activity category-food">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Food</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>Ko Lanta has all the benefits of local thai food, combined with the more regional souterhn dishes. Also a great selection of western food restaurants. You can get almost anything on the island your appetite desires!</p>
                         </div>
                     </div>
                     <div class="activity category-culture">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Bars/Pubs</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>Not famed for its night life, Koh Lanta had many beach bars and road side establishments. Each bar has a 'party night' so make sure you find out where that is to find a friendly, fun and intimate gatherings.</p>
                         </div>
                     </div>
                     <div class="activity category-sports">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Cross Fit</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>There are even regular cross fit classes that run on the island to keep you fit and healthy whilst away from home.</p>
                         </div>
                     </div>
                 </div> 
