--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
                             <h2>Bars/Pubs</h2>
-                            <p>Not famed for its night life, Koh Lanta had many beach bars and road side establishments. Each bar has a 'party night' so make sure you find out where that is to find a friendly, fun and intimate gatherings.</p>
+                            <p>Not famed for its night life, Koh Lanta had many beach bars and road side establishments. Each bar has a 'party night' so make sure you find out where that is to find the friendly, fun and intimate gatherings.</p>
                         </div>
                     </div>
                     <div class="activity category-sports">
