--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
                 <h1>Events</h1>
                 <div class="row">
                     <div class="column col-50 event">
-                        <h2>The Loy Rua Festival</h2>
+                        <h2>Loy Rua (Floating Boat)</h2>
                         <span class="date">October 2015</span>
                         <a class="location" href="#">Chao Ley Village</a>
-                        <p>floating boat festival. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                        <p>The sea gypsy version of Loy Katong. Around the end of October the village men will build a symbolic boat and place wooden statues of themselves in it along with nail clippings, hair and popped rice. By performing this ritual, they ask for forgiveness from the sea gods and of any offenses they have made to the sea. It is believed that all evil is carried away in the symbolic boat. </p>
                     </div>
                     <div class="column col-50 event">
-                        <h2>Loi Krathong</h2>
+                        <h2>Loi Krathong (Floating Raft)</h2>
                         <span class="date">November 21st 2015</span>
                         <a class="location" href="#">Old Town</a>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                        <p>Around the full moon in November, the Thai people build tiny rafts filled with flowers and incense and set them afloat. The act of floating away represents letting go of grudges, anger and defilements. A fresh start. A beautiful event.</p>
                     </div>
                     <div class="column col-50 event">
-                        <h2>Laanta Lanta Festival</h2>
+                        <h2>Laanta Lanta</h2>
                         <span class="date">March 2016</span>
                         <a class="location" href="#">Lanta Old Town</a>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                        <p>Usually around March the annual cultural festival held in Lanta Old Town, highligts the island communities. The festival brings music and arts from all around Thailand. It is a must go.</p>
                     </div>
                     <div class="column col-50 event">
                         <h2>Song Kran</h2>
-                        <span class="date">13. April 2016</span>
+                        <span class="date">13.-15. April 2016</span>
                         <a href="#" class="location">Everywhere on Ko Lanta</a>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                        <p>Thai New Year from 13-15th April washes away the old year by pouring water on other people and ring in the new year with a cool heart. Whole villages come out in force with buckets and super soakers filled with water. Prepare to get wet!</p>
                     </div>
                 </div>
             </div>
