--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                     </div>
                     <div class="activity category-sports category-health">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-yoga.jpg" alt="Yoga photo by Florian Ziegler – http://florianziegler.de/" />
                             <h2>Yoga</h2>
                             <p>There are many Yoga schools on the island that cater to all the ranges. Open All year around.</p>
                         </div>
