--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     </div>
                     <div class="activity category-culture category-food">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-cooking.jpg" alt="cooking class photo by Connie Ma - https://www.flickr.com/photos/ironypoisoning" />
                             <h2>Thai cooking classes</h2>
                             <p>There are many offerings for cooking courses, from an authentic one-n-one experience with a local family cook, to a fully blown four course menu lesson.</p>
                         </div>
