--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     </div>
                     <div class="activity category-culture">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-temple.jpg" alt="Buddhist Forest Monastery" />
                             <h2>Buddhist temple</h2>
                             <p>There are two temples on Koh Lanta. One near the car ferry in Saladan and one found at Lanta Old Town. The one near old town is popular. Every year monks come to the temples and you can observe special ceremonies.</p>
                         </div>
