Add photos for Muay Thai watching and Emerald Caves
Signed-off-by: Florian Ziegler <mail@florianziegler.de>

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     </div>
                     <div class="activity category-culture">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-emeral-cave.jpg" alt="Photo of the beach behind the Emerald Cave by Florian Ziegler http://florianziegler.de/" />
                             <h2>Emerald Caves</h2>
                             <p>The emerald cave, suposedly a former hideaway for pirate treasure is a fascinating secret limestome cast cave including a beach and a small closed jungle environemnt, with a few special species of wildlife.</p>
                         </div>
@@ -226,14 +226,14 @@
                     <div class="activity category-sports">
                         <div class="activity-inner">
                             <img src="images/intro-bg.jpg" alt="" />
-                            <h2>Muai Thai Training</h2>
+                            <h2>Muay Thai Training</h2>
                             <p>A newly refurbished Muai Thai Gym is situated on the island, offering high quality courses throughout the year. They are afilliated with one of the boxing stadiums and students reguarly fight in front of cheering tourists.</p>
                         </div>
                     </div>
                     <div class="activity category-sports category-culture">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
-                            <h2>Muai Thai Stadium Watching</h2>
+                            <img src="images/activity-muaythai-stadium.jpg" alt="Foto of a Muay Thai fight - photo by Florian Ziegler http://florianziegler.de/" />
+                            <h2>Muay Thai Stadium Watching</h2>
                             <p>There are two Muai Thai stadiums on the island, one in Klong Dao and one in Long Beach. Both run reguar two fights a week.</p>
                         </div>
                     </div>
