--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     </div>
                     <div class="activity category-culture">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-tiger-caves.jpg" alt="Tiger Caves photo by Ben and Debs Blench – https://www.flickr.com/photos/benanddebsyearoff/" />
                             <h2>Tiger caves</h2>
                             <p>Another cave in the south of Koh Lanta just past Klong Nin beach.</p>
                         </div>
