--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     </div>
                     <div class="activity category-sports">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-crossfit.jpg" alt="box 245 Lanta Gym" />
                             <h2>Cross Fit</h2>
                             <p>There are even regular cross fit classes that run on the island to keep you fit and healthy whilst away from home.</p>
                         </div>
