--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     </div>
                     <div class="activity category-culture">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-language-school.jpg" alt="Thail Language School" />
                             <h2>Thai Language School</h2>
                             <p>High quality one day Thai lessons to full one year courses can be arranged with education visas on the island.</p>
                         </div>
