--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                     </div>
                     <div class="activity category-culture">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-bar.jpg" alt="pangea beach bar koh lanta" />
                             <h2>Bars/Pubs</h2>
                             <p>Not famed for its night life, Koh Lanta had many beach bars and road side establishments. Each bar has a 'party night' so make sure you find out where that is to find the friendly, fun and intimate gatherings.</p>
                         </div>
