Remove filters "nearby islands" and "festivals filter"
Signed-off-by: Florian Ziegler <mail@florianziegler.de>

--- a/index.html
+++ b/index.html
@@ -95,13 +95,11 @@
                 <ul class="activity-filter">
                     <li data-filter="all">Show All</li>
                     <li data-filter=".category-water">Water</li>
-                    <li data-filter=".category-islands">Nearby Islands</li>
                     <li data-filter=".category-nature">Nature</li>
                     <li data-filter=".category-culture">Culture/Spiritual</li>
                     <li data-filter=".category-sports">Sports</li>
                     <li data-filter=".category-food">Food</li>
                     <li data-filter=".category-health">Health &amp; Wellness</li>
-                    <li data-filter=".category-festivals">Festivals</li>
                 </ul>
                 <div class="activity-list">
                     <div class="activity category-water">
@@ -139,7 +137,7 @@
                             <p>Boat charters are available to/from neighbouring islands and down to the south near beautiful islands near the Malaysian border.</p>
                         </div>
                     </div>
-                    <div class="activity category-islands">
+                    <div class="activity category-nature">
                         <div class="activity-inner">
                             <img src="images/activity-local-islands.jpg" alt="Emerald Caves photo by Angela Rutherford – https://www.flickr.com/photos/archivalproject/" />
                             <h2>Local Island Trips</h2>
