--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     </div>
                     <div class="activity category-sports">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-golf.jpg" alt="T Off – Lanta's golf driving range" />
                             <h2>Golf Driving Range</h2>
                             <p>A golf driving range is available including clubs for rent and a rather fun and original way of retreiving golf balls. Open All year around.</p>
                         </div>
