--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     </div>
                     <div class="activity category-sports">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-horse.jpg" alt="Horseback riding on the beach" />
                             <h2>Horseback riding</h2>
                             <p>Hourse back riding is available in Klong Nin and is a beautiful way to explore some of the rain forests or to gallivant down one of our amazing beaches than on horseback. </p>
                         </div>
