--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     </div>
                     <div class="activity category-culture">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-local-markets.jpg" alt="Shop at local markets throughout the week" />
                             <h2>Local markets</h2>
                             <p>There are many local markets on Lanta, depending on the day of the week and time of the year you can catch many of them from the road side. Otherwise ask a local where you can go.</p>
                         </div>
