Massage and dirt biking

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     </div>
                     <div class="activity category-sports">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-dirt-biking.jpg" alt="Dirt biking around the island. Photo by Sam Smith – https://www.flickr.com/photos/samosmith/" />
                             <h2>Dirt biking</h2>
                             <p>You can rent 250cc bikes through rubber plantations, small villages, and some amazing scenery you might otherwise miss.</p>
                         </div>
@@ -279,7 +279,7 @@
                     </div>
                     <div class="activity category-health">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-massage.jpg" alt="Thai massage. Photo by Mario R – https://www.flickr.com/photos/ruckh/" />
                             <h2>Thai massage</h2>
                             <p>There are many massage options avaiable on Lanta, you can get authentic Thai massage and even Swedish style massages. Some are even trained from the famous Wat Pho. You can even get a massage on the beach!</p>
                         </div>
