National Park and Animal Welfare

--- a/index.html
+++ b/index.html
@@ -300,16 +300,9 @@
                     </div>
                     <div class="activity category-culture">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-animal-welfare.jpg" alt="Lanta Animal Welfare" />
                             <h2>Animal Welfare</h2>
                             <p>A great charity organisation on Koh Lanta. They house cats and dogs that were once abandonded or wild and have adoption schemes to help find them new homes. They also have a full animal clinic onsite</p>
-                        </div>
-                    </div>
-                    <div class="activity">
-                        <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
-                            <h2>Shopping</h2>
-                            <p>A whole host of shops and markets are open around the island.</p>
                         </div>
                     </div>
                     <div class="activity category-nature">
@@ -321,7 +314,7 @@
                     </div>
                     <div class="activity category-nature">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-national-park.jpg" alt="National Park photo by Stefan Leitner – https://www.flickr.com/photos/kitetraveller/" />
                             <h2>National Park</h2>
                             <p>The national park in the south, encoroprates a great day out, there is 1-2 hour a jungle treck up and over the park, a beautiful crescent beach and on the other side rocky cliffs and a lighthouse.</p>
                         </div>
