Change header image and claim
Signed-off-by: Florian Ziegler <mail@florianziegler.de>

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <header class="site-header">
             <div class="site-header-inner">
                 <a class="logo" href="/"><img src="images/lanta-logo.png" alt="Lanta Info" /></a>
-                <div class="description">Discover Thailand's Hidden Paradise.</div>
+                <div class="description">Discover Thailand's Hidden Paradise</div>
                 <nav class="site-nav">
                     <ul>
                         <li><a href="#seasons">Seasons</a></li>
@@ -38,7 +38,7 @@
         <section id="intro">
             <div class="section-inner">
                 <h1>#AlwaysLanta</h1>
-                <p>Explore Koh Lanta, where you can still have an entire beach to yourself.</p>
+                <img src="images/discover-thailands-hidden-paradise.png" alt="Discover Thailand's Hidden Paradise" />
             </div><!-- .section-inner -->
         </section><!-- #intro -->
         <section id="seasons">
