Fix festival date
Signed-off-by: Florian Ziegler <mail@florianziegler.de>

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </div>
                     <div class="column col-50 event">
                         <h2>Song Kran</h2>
-                        <span class="date">13.-15. April 2016</span>
+                        <span class="date">April 13th - 15th 2016</span>
                         <a href="#" class="location">Everywhere on Ko Lanta</a>
                         <p>Thai New Year from 13-15th April washes away the old year by pouring water on other people and ring in the new year with a cool heart. Whole villages come out in force with buckets and super soakers filled with water. Prepare to get wet!</p>
                     </div>
