--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </div>
                     <div class="activity category-water">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-fishing.jpg" alt="Vidar Stensen - https://www.flickr.com/photos/vidar2010" />
                             <h2>Fishing</h2>
                             <p>Fishers can catch the likes of marlin, sailfish, barracuda, red snapper, and tuna. Three different kinds of fishing trip are offered by private longtail boat: half-day, full-day, and night fishing.</p>
                         </div>
@@ -194,9 +194,9 @@
                     </div>
                     <div class="activity category-culture">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
-                            <h2>Chinese temple, Old Town</h2>
-                            <p>There is an old abandoned Chinese temple completely on its own on top of a hill on the west coast of Koh Lanta.</p>
+                            <img src="images/activity-chinese.jpg" alt="" />
+                            <h2>Chinese heritage, Old Town</h2>
+                            <p>There is an old abandoned Chinese temple completely on its own on top of a hill on the west coast of Koh Lanta. And also a Chinese Shrine in old town.</p>
                         </div>
                     </div>
                     <div class="activity category-culture">
@@ -222,7 +222,7 @@
                     </div>
                     <div class="activity category-sports">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-muaithai.jpg" alt="Williams Muay Thai Gym" />
                             <h2>Muay Thai Training</h2>
                             <p>A newly refurbished Muai Thai Gym is situated on the island, offering high quality courses throughout the year. They are afilliated with one of the boxing stadiums and students reguarly fight in front of cheering tourists.</p>
                         </div>
@@ -236,7 +236,7 @@
                     </div>
                     <div class="activity category-sports">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-gym.jpg" alt="Williams Gym Lanta" />
                             <h2>Gym</h2>
                             <p>There is a full Gym on Lanta, with treadmills, excercise bikes, a full range of weights within a comfortable air conditioned site. Open All year around.</p>
                         </div>
@@ -280,14 +280,14 @@
                         <div class="activity-inner">
                             <img src="images/activity-massage.jpg" alt="Thai massage. Photo by Mario R – https://www.flickr.com/photos/ruckh/" />
                             <h2>Thai massage</h2>
-                            <p>There are many massage options avaiable on Lanta, you can get authentic Thai massage and even Swedish style massages. Some are even trained from the famous Wat Pho. You can even get a massage on the beach!</p>
+                            <p>Chose between a wide range of classic treatments such as Deep Tissue massage for aching muscles, Thai massage or Swedish Aroma massage for ultimate relaxation. Some are even trained from the famous Wat Pho. You can even get a massage on the beach!</p>
                         </div>
                     </div>
                     <div class="activity category-health">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-spa.jpg" alt="Unique Hotels - https://www.flickr.com/photos/uniquehotelsgroup" />
                             <h2>Spa Treatments</h2>
-                            <p>There are many spas available, offering a wide range of treatments.</p>
+                            <p>Koh Lanta is the perfect place to escape daily stress and find inner harmony through one of the islands many spa´s and resorts. You can also try more unique treatments such as Warm Coconut Soother or Figure Sculpting Bamboo Massage.</p>
                         </div>
                     </div>
                     <div class="activity category-health">
@@ -306,9 +306,9 @@
                     </div>
                     <div class="activity category-nature">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activity-jungle.jpg" alt="Liam - https://www.flickr.com/photos/grimbil/" />
                             <h2>Jungle Treking</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Sed fringilla porttitor diam. Cras interdum, nisi ac sagittis lacinia, magna nunc ultricies sem, a ultricies arcu nulla eget massa.</p>
+                            <p>Koh Lanta has a beautiful unspoiled rainforest waiting to be discovered. Rent a local guide or simply find one of the jungle paths by yourself. A perfect place to see rare species, wild monkeys and birds.</p>
                         </div>
                     </div>
                     <div class="activity category-nature">
@@ -320,7 +320,7 @@
                     </div>
                     <div class="activity category-food">
                         <div class="activity-inner">
-                            <img src="images/intro-bg.jpg" alt="" />
+                            <img src="images/activities-food.jpg" alt="Charles Haynes - https://www.flickr.com/photos/haynes" />
                             <h2>Food</h2>
                             <p>Ko Lanta has all the benefits of local thai food, combined with the more regional souterhn dishes. Also a great selection of western food restaurants. You can get almost anything on the island your appetite desires!</p>
                         </div>
