--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Lanta.info</title>
+
+    <meta property="og:image" content="http://www.lanta.info/images/kolanta-sunset.jpg" />
+    <meta property="og:title" content="Koh Lanta tourist information and seasons" />
+    <meta property="og:url" content="http://www.lanta.info" />
+    <meta property="og:description" content="An upto date guide to Koh Lanta's activities, seasons and festivals." />
+
+    <meta name="twitter:image" content="http://www.lanta.info/images/kolanta-sunset.jpg" />
+
+	<title>Koh Lanta tourist information and seasons</title>
+    <meta name="description=" content="An upto date guide to Koh Lanta's activities, seasons and festivals."/>
+    <meta name="keywords" content="koh,ko,lanta,tourist,information,thailand,season,activities,festivals" />
+
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
 	<link rel="stylesheet" href="css/style.min.css" />
 
@@ -266,7 +277,7 @@
                         <div class="activity-inner">
                             <img src="images/activity-dirt-biking.jpg" alt="Dirt biking around the island. Photo by Sam Smith – https://www.flickr.com/photos/samosmith/" />
                             <h2>Dirt biking</h2>
-                            <p>You can rent 250cc bikes through rubber plantations, small villages, and some amazing scenery you might otherwise miss.</p>
+                            <p>You can rent 250cc bikes and ride through rubber plantations, small villages, and some amazing scenery you might otherwise miss.</p>
                         </div>
                     </div>
                     <div class="activity category-culture">
@@ -322,14 +333,14 @@
                         <div class="activity-inner">
                             <img src="images/activities-food.jpg" alt="Charles Haynes - https://www.flickr.com/photos/haynes" />
                             <h2>Food</h2>
-                            <p>Ko Lanta has all the benefits of local thai food, combined with the more regional souterhn dishes. Also a great selection of western food restaurants. You can get almost anything on the island your appetite desires!</p>
+                            <p>Ko Lanta has all the benefits of local thai food, combined with the more regional southern dishes. Also a great selection of western food restaurants. You can get almost anything on the island your appetite desires!</p>
                         </div>
                     </div>
                     <div class="activity category-culture">
                         <div class="activity-inner">
                             <img src="images/activity-bar.jpg" alt="pangea beach bar koh lanta" />
                             <h2>Bars/Pubs</h2>
-                            <p>Not famed for its night life, Koh Lanta had many beach bars and road side establishments. Each bar has a 'party night' so make sure you find out where that is to find the friendly, fun and intimate gatherings.</p>
+                            <p>Not famed for its night life, Koh Lanta has many beach bars and road side establishments. Each bar has a 'party night' so make sure you find out where that is to find the friendly, fun and intimate gatherings.</p>
                         </div>
                     </div>
                     <div class="activity category-sports">
@@ -370,5 +381,15 @@
             </div>
         </footer>
     </div><!-- .site-wrap -->
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-62279278-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
